--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -4,7 +4,7 @@
 
   <div class="list-group list-reset">
     <button
-      class="list-group-item lis-group-item-action"
+      class="list-group-item list-group-item-action"
       *ngFor="let item of tags"
       (click)="searchTag(item)"
     >
